<resources>
    <string name="app_name">TestTaskApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="e_mail_hint">Enter e-mail</string>
    <string name="sign_up">Sign_up</string>
    <string name="sign_in">Sign in</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recovering_password">Recovering Password</string>
    <string name="Ok">OK</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="error">Error</string>
    <string name="error_message">Please, check your internet connection status and restart app</string>
    <string name="check_exit">Are you sure?</string>
    <string name="warning">Closing the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_password">Enter password</string>
</resources>